--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ on:
   # watch:
   #   types: started
 
-permissions: read-all|write-all
+permissions: write-all
 
 env:
   REPO_URL: https://github.com/DHDAXCW/lede-rockchip
