--- a/configs/lean/lean_docker.config
+++ b/configs/lean/lean_docker.config
@@ -84,6 +84,7 @@ CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-brook-server=y
+CONFIG_PACKAGE_luci-app-chatgpt=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
